2000-02-12  Tim Magill  <magill@gate.net>

	* remake.c (update_file_1): 
	(notice_finished_file): 
	(remake_file): 

	* main.c (main): 

	* job.c (reap_children): 
	(start_job_command): 

	* file.c (enter_file)
	(remove_intermediates): 
	(print_file): 

	* filedef.h: converted update_status field from a short int, to an
	unsigned int :1.  previously, update status indicated whether the
	file had actually executed any commands, won, lost, or lost under
	-q conditions.  command_state indicates more clearly whether or
	not any commands have been executed for this file.  lost or lost
	under -q conditions can be determined by a combination of
	question_flag and lost.  Thus, update_status needs only indicate
	won or lost.


	* implicit.c (try_implicit_rule): 
	* remake.c (check_dep):
	* remake.c (update_file_1): 
	move setting of tried_implicit into try_implicit_rule().  It is
	only called in two places and the flag is set immediately after.


	* remake.c (update_file_1): collapsed if statement based on
	file->command_state into switch statment which immediately
	follows.  Removed code that could not be reached.

	* remake.c (update_file): advance f pointer so as not to consider
	same file twice after breaking loop.

	* file.c (rehash_file): replaced hard coded check_renamed loop
	with standard macro.  seemed like the right thing to do.
	

2000-02-09  Tim Magill <magill@gate.net>
	Started branch for cleaning up internal make structure regarding
	recursion paths.  Branch name is filedef-cleanup and was started
	from a point on the mainline at filedef-cleanup-base.  either tags
	are suitable for cvs commands.

	* file.c, filedef.h, main.c, remake.c (updated): Removed updated
	member from 'struct filedef'.  filedef->command_state fully
	contains the same information and more.

	
2000-02-07  Paul D. Smith  <psmith@gnu.org>

	For += target-specific variables we need to remember which
	variable set we found the variable in, so we can start looking