@@ -1,3 +1,8 @@
+2000-02-20  Tim Magill  <magill@gate.net>
+
+	* remake.c (update_goal_chain): removed variable
+	ocommands_started, it was essentially unused.
+
 2000-02-12  Tim Magill  <magill@gate.net>
 
 	* remake.c (update_file_1): 
